--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,38 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+fastapi = {extras = ["standard"], version = "^0.115.5"}
+uvloop = "^0.21.0"
+pydantic-settings = "^2.6.1"
+fastapi-pagination = "^0.12.32"
+python-slugify = "^8.0.4"
+beanie = "^1.27.0"
 
+
+[tool.poetry.group.dev.dependencies]
+pre-commit = "^4.0.1"
+
+
+[tool.poetry.group.test.dependencies]
+pytest = "^8.3.3"
+coverage = "^7.6.8"
+pytest-cov = "^6.0.0"
+pytest-asyncio = "^0.24.0"
+mongomock-motor = "^0.0.34"
+pytest-dotenv = "^0.5.2"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+env_files = "tests/.test.env"
+env_override_existing_values = 1
+capture = "no"
+log-cli-level = "INFO"
+python_files = "test_*.py"
+asyncio_mode = "auto"
+filterwarnings = [
+  "ignore",
+  "ignore:.*U.*mode is deprecated:DeprecationWarning"
+]
