--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,2 +1,2 @@
 [settings]
-known_third_party = beanie,fastapi,motor,pydantic,pydantic_settings,pymongo,typer,uvicorn
+known_third_party = beanie,fastapi,fastapi_pagination,getmac,httpx,mongomock_motor,pydantic,pydantic_settings,pymongo,pytest,typer,user_agents,uvicorn
