--- a/tests/.test.env
+++ b/tests/.test.env
@@ -5,7 +5,7 @@ APP_RELOAD=True
 APP_LOG_LEVEL=debug
 APP_ACCESS_LOG=True
 APP_DEFAULT_PORT=8000
-ALLOW_ANONYM_PUSH=False
+ALLOW_ANONYM_PUSH=True
 APP_LOOP=uvloop
 
 # DATABASE URI
