--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -64,9 +64,8 @@ jobs:
             - name: 'Checkout code'
               uses: actions/checkout@v3
               with:
-                submodules: recursive
+                submodules: true
                 token: ${{ secrets.GH_SUBMODULE_TOKEN_COMMON }}
-                fetch-depth: 0
 
             - name: 'Cache pip and poetry'
               uses: ./.github/actions/cache-package
