--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -103,6 +103,9 @@ jobs:
         steps:
             - name: 'Checkout code'
               uses: actions/checkout@v3
+              with:
+                  submodules: true
+                  token: ${{ secrets.GH_SUBMODULE_TOKEN_COMMON }}
 
             - name: 'Login to Gihtub Docker registry'
               run: |
